<resources>
    <string name="form_main_menu">MAIN MENU</string>
    <string name="form_group_menu">GROUP MENU</string>
    <string name="form_group_avail">SELECT GROUP</string>
    <string name="form_group_data">LIST DATA</string>
    <string name="form_group_draf">LIST DRAFT</string>
    <string name="form_group_rejected">LIST REJECTED</string>
    <string name="form_no_connection_internet">LOST CONNECTION</string>
    <string name="form_add_group">ADD GROUP</string>
    <string name="form_search_grouptype">GROUP TYPE</string>
    <string name="form_search_province">PROVINCE</string>
    <string name="form_search_city">CITY</string>
    <string name="form_search_distrik">DISTRICT</string>
    <string name="form_search_distrik_area">DISTRICT AREA</string>
    <string name="form_search_supporter">SUPPORTER</string>
    <string name="form_search_ticket_pack">TICKET PACK</string>
    <string name="form_photo">PHOTO</string>
    <string name="form_booking">BOOKING</string>
    <string name="form_calendar">Select Date</string>
    <string name="form_reservation_menu">RESERVATION MENU</string>
    <string name="form_booking_list">BOOKING LIST</string>
    <string name="form_reservation_list">RESERVATION LIST</string>
    <string name="form_add_booking">NEW BOOKING</string>
    <string name="form_change_date">CHANGE DATE</string>
    <string name="form_modif_booking">MODIF. BOOKING</string>
    <string name="form_search_promotor">PROMOTOR</string>
    <string name="form_search_responsible">RESPONSIBLE</string>
    <string name="form_search_ticket_add_pack">TICKET ADD PACK</string>
    <string name="form_search_Package">PACKAGE</string>
    <string name="form_add_package">ADD PACKAGE</string>
    <string name="form_group_personal">LIST PERSONAL</string>
    <string name="form_history_resv">HISTORY</string>
    <string name="app_name">Reservation Group</string>
    <string name="hint_username_login">User Name</string>
    <string name="hint_password_login">Password</string>
    <string name="hint_dialog_find_text">Type here to search</string>
    <string name="hint_search_group">Search group name</string>
    <string name="hint_search_group_distrik">Search district</string>
    <string name="textview_username_main_menu">Username : </string>
    <string name="textview_version_main_menu">Version : </string>
    <string name="textview_no_connection">Lost Connection</string>
    <string name="btn_avail_group_menu">DATA</string>
    <string name="btn_draft_group_menu">DRAFT</string>
    <string name="btn_reject_group_menu">AVAIL GRP.</string>
    <string name="btn_yes_message">Yes</string>
    <string name="btn_no_message">No</string>
    <string name="btn_search_text">Search</string>
    <string name="btn_delete_message">Delete</string>
    <string name="btn_reservation_main_menu">RESERVATION</string>
    <string name="btn_daily_report_main_menu">DAILY REPORT</string>
    <string name="btn_item_send_draft">Send To Draft</string>
    <string name="btn_find_group">Find</string>
    <string name="btn_ok_message">OK</string>
    <string name="btn_login_login">LOGIN</string>
    <string name="btn_try_again">Try Again</string>
    <string name="btn_add_group">Add</string>
    <string name="btn_view_image_group">View Image</string>
    <string name="btn_edit_data_group">Edit Group</string>
    <string name="btn_search_select">Select</string>
    <string name="btn_change_image">Change Image</string>
    <string name="btn_foward">Next</string>
    <string name="btn_booking">BOOKING</string>
    <string name="btn_select_group">SELECT</string>
    <string name="btn_dialog_save">SAVE</string>
    <string name="btn_dialog_cancel">CANCEL</string>
    <string name="btn_add_package">ADD</string>
    <string name="message_dialog_warning">Warning</string>
    <string name="message_dialog_confirmation">Confirmation</string>
    <string name="message_dialog_Information">Information</string>
    <string name="message_failed_login">Login failed!.</string>
    <string name="message_exit_app">Do you want to exit ?</string>
    <string name="message_logout_app">Do you want to logout ?</string>
    <string name="message_send_to_draft1">Do you want to send</string>
    <string name="message_send_to_draft2">to draft ?</string>
    <string name="message_send_to_posting">Do you want to post</string>
    <string name="message_invalid_group_name">Please define group name.</string>
    <string name="message_invalid_group_grade">Please define grade.</string>
    <string name="message_invalid_group_type">Please define group type.</string>
    <string name="message_invalid_group_catagory">Please define group category.</string>
    <string name="message_invalid_group_address">Please define address.</string>
    <string name="message_invalid_group_province">Please define province.</string>
    <string name="message_invalid_group_city">Please define city.</string>
    <string name="message_invalid_group_distrik">Please define district.</string>
    <string name="message_invalid_group_distrik_area">Please define district area.</string>
    <string name="message_invalid_group_zip_code">Please define zip code.</string>
    <string name="message_invalid_group_phone">Please define phone.</string>
    <string name="message_invalid_group_principal">Please define principal name.</string>
    <string name="message_invalid_group_PIC">Please define group PIC.</string>
    <string name="message_invalid_group_HP_PIC">Please define No. HP PIC</string>
    <string name="message_invalid_group_child">Please define Child</string>
    <string name="message_invalid_group_adult">Please define Adult</string>
    <string name="message_success_saving_data">Added Successfully.</string>
    <string name="message_failed_saving_data">Data is already exist.</string>
    <string name="message_please_wait">Uploading process</string>
    <string name="message_success_edit_data">Edited Successfully</string>
    <string name="message_failed_edit_data">Edit Failed.</string>
    <string name="message_failed_permission_storage">Write External Storage permission allows us to do store images. Please allow this permission in App Settings.</string>
    <string name="message_failed_permission_calendar">Calendar permission allows. Please allow this permission in App Settings.</string>
    <string name="message_warning_change_date">Can not change reservation date. The reservation has been canceled.</string>
    <string name="message_warning_booking_promoter">Please define promoter.</string>
    <string name="message_warning_booking_ticket">Please define ticket.</string>
    <string name="message_warning_booking_amount_visitor">Please define amount visitor.</string>
    <string name="message_warning_booking_supporter">Please define supporter.</string>
    <string name="message_warning_invalid_quota">Can not save reservation to selected date</string>
    <string name="message_warning_invalid_quota_child_1">Remaining child quota for group is </string>
    <string name="message_warning_invalid_quota_child_2">Please reduce amount of children for this reservation.</string>
    <string name="message_warning_invalid_quota_adult_1">Remaining adult quota for group is </string>
    <string name="message_warning_invalid_quota_adult_2">Please reduce amount of adult for this reservation.</string>
    <string name="message_warning_invalid_owner">Can not send to draft, you are not owner.</string>
    <string name="message_warning_empty_name_responsible">Please define responsible name.</string>
    <string name="message_confirm_delete_package1">Do you want to delete package ?</string>
    <string name="message_confirm_delete_package2">Click yes to delete!</string>
    <string name="message_invalid_quantity_package">Please define quantity.</string>
    <string name="message_invalid_modif_responsible">Responsible group may not be empty.</string>
    <string name="message_invalid_modif_promotor">Promotor group may not be empty.</string>
    <string name="message_invalid_modif_ticket">Please define ticket package.</string>
    <string name="message_invalid_modif_add_ticket">Please define additional ticket package for additional person.</string>
    <string name="message_invalid_modif_adult">Adult ticket may not be empty.</string>
    <string name="message_reason_cancel">Please define reason of cancelation.</string>
    <string name="message_descrp_reason_cancel">Please give remark for the cancelation.</string>
    <string name="message_confirm_cancel">Do you really want to cancel selected booking quota?</string>
    <string name="message_warning_entered">Can not change reservation date. The group has been entered the park.</string>
    <string name="message_warning_access1">Can not change reservation date. The bracelets have been pre-registered.</string>
    <string name="message_warning_access2">Please ask Airport department to removed them.</string>
    <string name="message_invalid_pic_name">Please define PIC name.</string>
    <string name="str_group_name">Group Name*</string>
    <string name="str_group_grade">Grade*</string>
    <string name="str_group_type">Group Type*</string>
    <string name="str_group_catagory">Category</string>
    <string name="str_group_address">Address*</string>
    <string name="str_group_district_area">District Area*</string>
    <string name="str_group_district">District*</string>
    <string name="str_group_city">City*</string>
    <string name="str_group_province">Province*</string>
    <string name="str_group_zip_code">Zipcode*</string>
    <string name="str_group_phone">Phone*</string>
    <string name="str_group_fax">Fax</string>
    <string name="str_group_email">Email</string>
    <string name="str_group_principal">Principal*</string>
    <string name="str_group_no_hp_principal">Handphone Number</string>
    <string name="str_group_pic">PIC*</string>
    <string name="str_group_no_hp_pic">Handphone Number*</string>
    <string name="str_group_toddler">Toddler</string>
    <string name="str_group_child">Child*</string>
    <string name="str_group_adult">Adult*</string>
    <string name="str_group_trip_budget">Trip Budget</string>
    <string name="str_group_trip_freq">Trip Freq.</string>
    <string name="str_group_trip_place">Trip Place</string>
    <string name="str_group_field_trip">Field Trip</string>
    <string name="str_group_type_school">School</string>
    <string name="str_group_type_company">Company</string>
    <string name="str_group_type_course">Course</string>
    <string name="str_group_type_foundation">Foundation</string>
    <string name="str_group_type_personal">Personal</string>
    <string name="str_booking_date">Reservation Date</string>
    <string name="str_booking_arrival_time">Arrival Time</string>
    <string name="str_booking_leaving_time">Leaving Time</string>
    <string name="str_booking_shift">Shift</string>
    <string name="str_booking_morning">Morning</string>
    <string name="str_booking_afternoon">Afternoon</string>
    <string name="str_day_monday">Monday</string>
    <string name="str_add_responsible">Add Responsible</string>
    <string name="str_add_name_responsible">Name</string>
    <string name="str_add_occupation_responsible">Occupation</string>
    <string name="str_add_phone_responsible">Phone</string>
    <string name="str_add_promotor">Add Promotor</string>
    <string name="str_add_name_promotor">Name</string>
    <string name="str_add_alias_promotor">Alias</string>
    <string name="str_add_package_name">Name Package</string>
    <string name="str_add_package_quantity">Quantity</string>
    <string name="str_add_package_price">Price</string>
    <string name="str_add_package_total">Total</string>
    <string name="str_add_package_items">Items</string>
    <string name="str_add_package_list">List Package</string>
    <string name="str_name_pid">PIC Name</string>
    <string name="str_id_card">ID Card</string>
    <string name="str_null">0</string>
</resources>