<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="2dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    android:orientation="vertical"
    tools:context=".AddPackage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_add_package_name"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPackage"
        android:layout_marginLeft="10dp"
        android:textSize="14sp"
        android:editable="false"
        android:hint="@string/str_add_package_name"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*"
        android:isScrollContainer="true">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_add_package_quantity"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_add_package_price"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_add_package_total"
                android:textSize="14sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_null"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnSavePackage"
        style="@style/DefaultButtonText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/red_button"
        android:text="@string/btn_add_package"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e7e7f5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:layout_marginRight="200dp"
            android:textColor="@android:color/black"
            android:text="@string/str_add_package_total"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="@string/str_null"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_below="@+id/viewTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="200dp"
            android:textColor="@android:color/black"
            android:text="@string/str_add_package_items"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewTotal"
            android:gravity="right"
            android:text="@string/str_null"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/str_add_package_list"
        android:textSize="14sp" />


    <ListView
        android:id="@+id/ListPackage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>
