<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/str_add_promotor"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/NamaPromotor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_add_name_promotor"
            android:layout_marginBottom="5dp"
            android:inputType="text"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/AliasPromotor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_add_alias_promotor"
            android:inputType="text"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>



</LinearLayout>