<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="45dp"
    android:paddingRight="45dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu"

    android:background="@drawable/view">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp">


        <Button
            android:id="@+id/btnReservation"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/blue_button"
            android:padding="10dp"
            android:text="@string/btn_reservation_main_menu"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGroup"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:background="@drawable/red_button"
            android:padding="10dp"
            android:text="@string/btn_daily_report_main_menu"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_username_main_menu"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/txtUsernameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lblUserName"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/lblVersion"
        android:layout_below="@+id/lblUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_version_main_menu"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lblVersion"
        android:layout_below="@+id/lblUserName"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

</RelativeLayout>
